# clang_index_mcp

./: .editorconfig  .gitignore  .mutmut-config.toml  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_STORAGE_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLIENT_SETUP.md  COMPILE_COMMANDS_INTEGRATION.md  CONFIGURATION.md  CONTRIBUTING.md  DESIGN_TOOLS_DURING_ANALYSIS.md  DEVELOPMENT.md  HEADER_EXTRACTION_ARCHITECTURE.md  HEADER_EXTRACTION_IMPLEMENTATION_PLAN.md  HTTP_USAGE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  ISSUE_002_VALIDATION_RESULTS.md  LICENSE  MANIFEST.in  MCP_CONSOLE_TESTING.md  MCP_TOOLS_EVALUATION.md  Makefile  Makefile.test-mcp  PHASE1_PROGRESS.md  README.md  REQUIREMENTS.md  REQUIREMENTS_HTTP_SUPPORT.md  RESUME_HERE.md  SESSION_SUMMARY.md  TESTING.md  TESTING_AUTO_REFRESH_FIX.md  TEST_COVERAGE.md  TEST_IMPLEMENTATION_CHECKLIST.md  TEST_PLAN.md  TEST_PLAN_ADVANCED_FEATURES.md  TEST_PLAN_COMPILE_COMMANDS.md  TEST_PLAN_INTEGRATION.md  (+25 more)
.ai/: AGENTS.md  CLAUDE.md
.githooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: CLAUDE_INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md
.test-projects/: README.md
.test-scenarios/: README.md  class-hierarchy.yaml  quick-check.yaml  validation-tc1-qualified-names.yaml  validation-tc3-templates.yaml  validation-tc4-inheritance.yaml
clang_index_mcp/: __main__.py  composition_root.py  cpp_analyzer.py  project_context.py
docs/: ANALYSIS_STORAGE_ARCHITECTURE.md  ARCHITECTURE.md  CLANG_TROUBLESHOOTING.md  CLAUDE_TESTING_GUIDE.md  COMPILE_COMMANDS_INTEGRATION.md  CONSISTENCY_AUDIT_2025-12-25.md  HTTP_USAGE.md  INCREMENTAL_ANALYSIS_IMPLEMENTATION_CHECKLIST.md  INTERRUPT_HANDLING.md  ISSUE_002_FIX_SUMMARY.md  ISSUE_FIXING_PLAN.md  LIMITATIONS.md  LLM_INTEGRATION_STRATEGY.md  MACOS_LIBCLANG_DISCOVERY.md  MANUAL_TESTING_OBSERVATIONS.md  MANUAL_TEST_OBSERVATIONS.md  MCP_TESTING_SKILL.md  MCP_TESTING_SKILL_STATUS.md  MCP_TOOLS_CHEATSHEET.md  MEMORY_OPTIMIZATION_PLAN.md  MIGRATION_GUIDE.md  QUALIFIED_NAMES_MIGRATION.md  RELEASE_NOTES.md  REMAINING_ISSUES_SUMMARY.md  REQUIREMENTS.md  TESTING.md  TESTING_GUIDE.md  TESTING_MACOS.md  TEST_COVERAGE.md  TEST_COVERAGE_ANALYSIS.md  TEST_FREEZE_ISSUE.md  TEST_MCP_COMMAND_REFERENCE.md  TEST_MCP_FAQ.md  TEST_WARNINGS_RESOURCE_LEAKS.md  VALIDATION_TEST_PLAN.md
examples/compile_commands_example/: CMakeLists.txt  README.md  compile_commands.json  cpp-analyzer-config.json  template_test.cpp
examples/compile_commands_example/include/: utils.h
examples/compile_commands_example/src/: main.cpp  utils.cpp
mcp_server/: __main__.py  argument_sanitizer.py  cache_backend.py  cache_manager.py  cache_migration.py  cache_orchestrator.py  call_graph.py  call_graph_service.py  cancellation_coordinator.py  change_scanner.py  clang_parser.py  compilation_environment.py  compile_commands_differ.py  compile_commands_manager.py  consolidated_tools.py  cpp_analyzer.py  cpp_analyzer_config.py  cpp_mcp_server.py  dependency_graph.py  diagnostics.py  error_tracking.py  execution_config.py  file_scanner.py  file_utils.py  header_tracker.py  hierarchy_format.py  http_server.py  incremental_analyzer.py  indexing_orchestrator.py  indexing_pipeline.py  indexing_progress_reporter.py  indexing_task_submitter.py  json_cache_backend.py  libclang_setup.py  project_context.py  project_identity.py  query_engine.py  refresh_pipeline.py  regex_validator.py  sanitization_rules.json  (+14 more)
scripts/: analyze_benchmark.py  analyze_structure_growth.py  analyze_template_indexing.py  analyze_tool_usage.py  benchmark_llm_tools.py  cache_stats.py  check_compile_commands_includes.py  debug_args.py  debug_cursor_location.py  debug_declarations.py  diagnose_args.py  diagnose_cache.py  diagnose_clang.py  diagnose_compile_commands.py  diagnose_gil.py  diagnose_libclang.py  diagnose_parse_errors.py  download_libclang.py  filter_compile_commands.py  fix_corrupted_cache.py  investigate_aliases.py  investigate_template_representation.py  investigate_usr.py  lmsconv2bin.py  memory_growth_analyzer.py  memory_profile_indexing.py  migrate_cache.py  profile_analysis.py  setup_test_env.sh  test_compile_commands_lookup.py  test_installation.py  test_interrupt_cleanup.py  test_issue8.py  test_issue_003_fix.py  (+4 more)
(+449 files in other folders)
